@@ -40,6 +40,10 @@ PHP                                                                        NEWS
    . Fixed bug GH-14638 (null dereference after XML parsing failure).
      (David Carlier)
 
+- SPL:
+  . Fixed bug GH-14639 (Member access within null pointer in
+    ext/spl/spl_observer.c). (nielsdos)
+
 - Standard:
   . Fix 32-bit wordwrap test failures. (orlitzky)
   . Fixed bug GH-14774 (time_sleep_until overflow). (David Carlier)
